@@ -241,7 +241,7 @@ revolver.air <- function(graph, cats, window,
         PACKAGE="igraph")
 }
 
-revolver.d.d <- function(graph, vtime=V(g)$time, etime=E(g)$time, niter=5,
+revolver.d.d <- function(graph, vtime=V(graph)$time, etime=E(graph)$time, niter=5,
                          sd=FALSE, norm=FALSE, cites=FALSE, expected=FALSE,
                          error=TRUE, debug=matrix(nc=2, nr=0),
                          verbose=igraph.par("verbose")) {
@@ -265,7 +265,7 @@ revolver.d.d <- function(graph, vtime=V(g)$time, etime=E(g)$time, niter=5,
 }
 
 revolver.p.p <- function(graph, events=get.graph.attribute(graph, "events"),
-                         vtime=V(g)$time, etime=E(g)$time,
+                         vtime=V(graph)$time, etime=E(graph)$time,
                          niter=5, sd=FALSE, norm=FALSE, cites=FALSE, expected=FALSE,
                          error=TRUE, debug=matrix(nc=2, nr=0),
                          verbose=igraph.par("verbose")) {
